Simple rule judge for crypto misuse API analysis